# KRDeZero

./: Makefile  README.md
kdezero/: Cargo.toml
kdezero/src/: config.rs  data_set.rs  dot_graph.rs  error.rs  function.rs  layer.rs  lib.rs  model.rs  optimizer.rs  test_utility.rs  utility.rs  variable.rs
kdezero/src/data_set/: data_loader.rs  sample.rs
kdezero/src/data_set/sample/: mnist.rs  spiral.rs
kdezero/src/function/: function_helper.rs  operator.rs
kdezero/src/function/operator/: add.rs  broadcast_to.rs  cos.rs  div.rs  exp.rs  get_item.rs  linear.rs  log.rs  matmul.rs  mean_squared_error.rs  mul.rs  neg.rs  pow.rs  relu.rs  reshape.rs  sigmoid.rs  sin.rs  softmax.rs  softmax_cross_entropy.rs  square.rs  sub.rs  sum.rs  sum_to.rs  tanh.rs  transpose.rs
kdezero/src/layer/: contents.rs
kdezero/src/layer/contents/: linear.rs
kdezero/src/model/: contents.rs
kdezero/src/model/contents/: mlp.rs  two_layer_net.rs
kdezero/src/optimizer/: contents.rs
kdezero/src/optimizer/contents/: momentum_sgd.rs  sgd.rs
kdezero/src/variable/: backward.rs  conversion.rs  create.rs  creator.rs  data.rs  grad.rs  info.rs  name.rs  ops.rs  variable_data.rs  variable_weak.rs
kdezero/src/variable/variable_data/: conversion.rs  create.rs  info.rs  operate.rs  operater.rs  operator.rs
kdezero/tests/: step_test.rs
ktensor/: Cargo.toml
ktensor/src/: error.rs  tensor.rs
ktensor/src/tensor/: compare.rs  convert.rs  create.rs  display.rs  info.rs  math.rs  ops_at.rs  random.rs  shape.rs  slice.rs
