[package]
name = "kdezero"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
num-traits = "0.2"
reqwest = { version = "0.11.22", features = ["blocking"] }
flate2 = "1.0.28"
ktensor = { path = "../ktensor" }

[dev-dependencies]
plotters = "0.3.3"
